crates/tui/snapshots/fullscreen/collaboration_modes/effort_selector_drag_copy_english.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: frame_text(buffer)
---
  .                                                                [Dashboard]













                                                   Copied 6 chars to clipboard
─ Thinking effort ──────────────────────────────────────────────────────────────

               Faster                  Smarter
               ───────────────▲───────────────    Multitask  off
                 low        high         max

           More reasoning for complex tasks and careful verification.

  ←/→ choose  ·  Tab toggle multitask  ·  Enter apply  ·  Esc cancel
