crates/tui/snapshots/fullscreen/collaboration_modes/effort_selector_drag_copy_narrow_english.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: frame_text(buffer)
---
  .                        [Dashboard]









           Copied 6 chars to clipboard
─ Thinking effort ──────────────────────

    Faster                  Smarter
    ───────────────▲───────────────
      low        high         max

             Multitask  off

  More reasoning for complex tasks and
          careful verification.

  ←/→ choose  ·  Tab toggle multitask
  ·  Enter apply  ·  Esc cancel
