crates/tui/snapshots/fullscreen/collaboration_modes/effort_selector_narrow_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: content
---
  .                           [仪表盘]










─ 推理强度 ─────────────────────────────

    更快                     更聪明
    ───────────────────────────▲───
      low        high         max

              多任务  关闭

    最高推理强度，可能消耗更多 token
     并耗时更长，适合最困难的任务。

  ←/→ 选择  ·  Tab 切换多任务协作  ·
  Enter 应用  ·  Esc 取消
